# porytiles

./: .clang-format  .gitignore  .porytiles-marker-file  .rgignore  Algo.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  Makefile.old  README.md  Todo.md  coverage.sh  format.sh  package.sh  tidy.sh  todo.sh  tscreate.cpp  tscreate.h
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: actions.yml  build-clang.yml  build-gcc.yml  build.yml  c-cpp.yml  dev_build.yml  linux_amd64_clang.yml  linux_amd64_gcc.yml  macos_arm64_clang.yml  macos_arm64_gcc.yml  main.yml  nightly_release.yml  pr_build.yml  pr_dev_build.yml
.github/workflows/templates/: linux_amd64_clang.yml  linux_amd64_gcc.yml  macos_arm64_gcc.yml
1.0.0/include/: bgr15.h  cli_parser.h  compiler.h  config.h  constants.h  decompiler.h  emitter.h  importer.h  input_png.h  png_frontend.h  rgba32.h  types.h
1.0.0/src/: bgr15.cpp  cli_parser.cpp  compiler.cpp  decompiler.cpp  emitter.cpp  importer.cpp  input_png.cpp  main.cpp  png_frontend.cpp  rgba32.cpp  types.cpp
Porytiles-1.X.X/cli/: main.cpp
Porytiles-1.X.X/lib/include/porytiles/: cli_parser.h  driver.h  errors_warnings.h  utilities.h
Porytiles-1.X.X/lib/src/: cli_parser.cpp  compiler.cpp  driver.cpp  errors_warnings.cpp  importer.cpp  types.cpp
Porytiles-1.X.X/test/: CMakeLists.txt  tests.cpp
Porytiles-1.x/: CMakeLists.txt  README.md
Porytiles-1.x/cli/: CMakeLists.txt
Porytiles-1.x/lib/: CMakeLists.txt
Porytiles-1.x/lib/include/porytiles/: build_version.h  porytiles_context.h  porytiles_exception.h
Porytiles-1.x/lib/src/: compiler.cpp  decompiler.cpp  emitter.cpp  errors_warnings.cpp  palette_assignment.cpp
Porytiles-1.x/test/: CMakeLists.txt
Porytiles-1.x/tests/: CMakeLists.txt
Porytiles-2.x/: CMakeLists.txt  README.md
Porytiles-2.x/include/: CMakeLists.txt
Porytiles-2.x/include/porytiles/: CMakeLists.txt
Porytiles-2.x/include/porytiles/Color/: Bgr15.h  ColorConverters.h  Rgba32.h
Porytiles-2.x/include/porytiles/Tile/: Rgba32Tile.h
Porytiles-2.x/lib/: CMakeLists.txt
Porytiles-2.x/lib/Color/: Bgr15.cpp  ColorConverters.cpp  Rgba32.cpp
Porytiles-2.x/lib/Tile/: Rgba32Tile.cpp
Porytiles-2.x/tests/: CMakeLists.txt
Porytiles-2.x/tests/Color/: Bgr15Test.cpp  CMakeLists.txt  ColorConvertersTest.cpp  ColorTest.cpp  Rgba32Test.cpp
Porytiles-2.x/tests/Tile/: Rgba32TileTest.cpp
Porytiles-2.x/tools/driver/: CMakeLists.txt  main.cpp
Resources/Examples/simple_secondary_1/: attributes.csv
Resources/Tests/: metatile_behaviors_invalid_1.h
Resources/Tests/anim_metatiles_2_dual_firered/primary/: attributes.csv
Resources/Tests/compiled_emerald_general/palettes/: 00.pal  03.pal  04.pal
Resources/Tests/compiled_emerald_lilycove/expected_decompiled/: attributes.csv
Resources/Tests/compiled_emerald_lilycove/palettes/: 02.pal  03.pal  05.pal  08.pal  10.pal
Resources/Tests/csv/: incorrect_row_format_1.csv  invalid_id_column_1.csv  missing_header_2.csv
Resources/Tests/errors_and_warnings/warn_unusedAttribute/dual/primary/: attributes.csv
Resources/Tests/palette_primer_1/palette-primers/: primer.pal
Resources/Tests/porytiles_primary_tutorial/: assign.cache
Resources/Tests/primary_general_emerald/: assign.cache
Scripts/: format.sh  package.sh  todo.sh
flags/: gcc13-macos-aarch64  llvm16-macos-aarch64
foo/: attributes.csv
img/: README.md
include/: cli_options.h  cli_parser.h  comparators.h  compiler.h  compiler_context.h  compiler_helpers.h  config.h  decompiler.h  driver.h  emitter.h  errors.h  errors_warnings.h  importer.h  init_checks.h  logger.h  normalize.h  palette.h  palette_assignment.h  pixel_comparators.h  png_checks.h  porytiles_context.h  program_name.h  ptcontext.h  ptexception.h  rgb_color.h  rgb_tiled_png.h  tile.h  tiled_png.h  tileset.h  tmpfiles.h  tscreate.h  tsexception.h  tsoutput.h  types.h  utilities.h  warnings.h
include/1.0.0/: types.h
palettes/: 00.pal
png++-0.2.9/: error.hpp
res/examples/porytiles-primary-tutorial/: attributes.csv
res/examples/porytiles-secondary-tutorial/: attributes.csv
res/examples/simple_primary_1/: assign.cfg
res/tests/: i_am_not_a_png.txt  metatile_behaviors_abridged.h  metatile_behaviors_invalid_2.h
res/tests/anim_metatiles_2/secondary/: assign.cache  attributes.csv
res/tests/anim_metatiles_2_dual/primary/: attributes.csv
res/tests/anim_metatiles_shared_tiles/: note.txt
res/tests/compiled/simple_primary_1/palettes/: 01.pal  02.pal  03.pal  04.pal  05.pal  10.pal
res/tests/compiled_emerald_general/expected_decompiled/: attributes.csv
res/tests/compiled_emerald_general/palettes/: 01.pal  07.pal
res/tests/compiled_emerald_lilycove/palettes/: 00.pal  04.pal  07.pal  09.pal  11.pal  15.pal
res/tests/csv/: correct_2.csv  duplicate_definition_1.csv  emerald1.csv  emerald_incorrect_1.csv  incorrect_row_format_2.csv  invalid_encounter_type_1.csv  invalid_id_column_2.csv  invalid_terrain_type_1.csv  missing_header_3.csv  missing_header_4.csv  unknown_behavior_1.csv
res/tests/errors_and_warnings/warn_attributesFileNotFound/primary_correct/: attributes.csv
res/tests/errors_and_warnings/warn_unusedAttribute/secondary/: attributes.csv
res/tests/primary_general_emerald/: assign.cfg
res/tests/primary_general_firered/: assign.cache  assign.cfg
res/tests/primary_general_sinnoh/: assign.cfg
script/: coverage.sh  package.sh  tidy.sh  todo.sh
src/: cli_parser.cpp  comparators.cpp  compiler.cpp  compiler_helpers.cpp  config.cpp  decompiler.cpp  driver.cpp  emitter.cpp  errors.cpp  errors_warnings.cpp  importer.cpp  init_checks.cpp  logger.cpp  main.cpp  normalize.cpp  palette.cpp  palette_assignment.cpp  pixel_comparators.cpp  png_checks.cpp  program_name.cpp  rgb_color.cpp  rgb_tiled_png.cpp  tests.cpp  tile.cpp  tiled_png.cpp  tileset.cpp  tmpfiles.cpp  tscreate.cpp  types.cpp  utilities.cpp  warnings.cpp
src/1.0.0/: types.cpp
